added control flow

--- a/Python/Control flow/practice.ipynb
+++ b/Python/Control flow/practice.ipynb
@@ -23,10 +23,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age =  25\n"
+     ]
+    }
+   ],
+   "source": [
+    "v= 100\n",
+    "name =\"Chaitu\"\n",
+    "is_true = True\n",
+    "age= 25\n",
+    "print(\"age = \",age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum is 37.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = float(input(\"Enter  a Number1\"))\n",
+    "b = float(input(\"Enter a number2\"))\n",
+    "\n",
+    "sum = a+b\n",
+    "difference = a-b\n",
+    "mul = a*b\n",
+    "div = a/b\n",
+    "\n",
+    "print(\"sum is\",sum)"
+   ]
   }
  ],
  "metadata": {
