--- a/Python/Control flow/assignment_question.ipynb
+++ b/Python/Control flow/assignment_question.ipynb
@@ -54,11 +54,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number is negative\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "n= int(input(\"Enter  a number\"))\n",
+    "if n>0:\n",
+    "    print(\"number is positive\")\n",
+    "elif n == 0:\n",
+    "    print(\"n is zero\")\n",
+    "else:\n",
+    "    print(\"number is negative\")\n"
    ]
   },
   {
@@ -70,11 +85,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c is largest\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "a= int(input(\"Enter number 1\"))\n",
+    "b= int(input(\"Enter number 2\"))\n",
+    "c= int(input(\"Enter number 3\"))\n",
+    "\n",
+    "if (a>b)&(a>c):\n",
+    "    print(\"a is largest\")\n",
+    "elif (b>c)&(b>a):\n",
+    "    print(\"b is largest\")\n",
+    "else:\n",
+    "    print(\"c is largest\")"
    ]
   },
   {
@@ -192,11 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chaitanyabejjanki\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "a='chaitanya'\n",
+    "b='bejjanki'\n",
+    "print(a+b)"
    ]
   },
   {
@@ -226,11 +270,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter  a symboll from +,-,*,/\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "a =float(input(\"Enter number 1\"))\n",
+    "b =float(input(\"Enter number 2\"))\n",
+    "symbol = input(\"enter  a symbol between +,-,*,/ only\")\n",
+    "\n",
+    "if symbol == '+':\n",
+    "    print(\"a+b is \", a+b)\n",
+    "    \n",
+    "elif symbol == '-':\n",
+    "    print(\"a-b is\", a-b)\n",
+    "elif symbol == '*':\n",
+    "    print(\"a*b is\", a*b)\n",
+    "elif symbol == '/':\n",
+    "    if b==0:\n",
+    "        print(\"Error b should not be equal to zero\" )\n",
+    "    else:\n",
+    "        print(\"a/b =\",a/b)\n",
+    "else:\n",
+    "    print(\"Enter  a symboll from +,-,*,/\")\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
