--- a/Python/Control flow/practice.ipynb
+++ b/Python/Control flow/practice.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,10 +36,31 @@
    ],
    "source": [
     "v= 100\n",
-    "name =\"Chaitu\"\n",
+    "name =\"Chaitu\" \n",
     "is_true = True\n",
     "age= 25\n",
     "print(\"age = \",age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,5):\n",
+    "    print (i)"
    ]
   },
   {
